--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
+<!-- Meta tag -->
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <!-- CSS link -->
   <link rel="stylesheet" type="text/css" href="styles/main.css">
   <link re="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.css">
   <link re="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.css">
 </head>
 
 <body>
+<!-- Header -->
   <header id="header">
     <h1>My EDA BLOG</h1>
      <div class="dropdown">
@@ -43,7 +46,7 @@
       </div>
   </header>
 
-   
+   <!-- Section -->
       <section id="sec">
        <img class="img1" src="images/bb.jpg" alt="profile" >
          <DIV  STYLE="position:absolute; top:150px; left:0px; width:100%; height:100px; float:left">
@@ -52,6 +55,7 @@
              </FONT></CENTER> 
        </section>
 
+<!-- Footer -->
        <footer id="nav1">
          <p><b>Follow me on<b></p>
              <a  href="https://twitter.com/ssumeshsurya"> <img src="../images/twitter.png" title="follow me" width="50" height="50"/>
