--- a/index.html
+++ b/index.html
@@ -11,59 +11,91 @@
 
 <body>
 <!-- Header -->
-  <header id="header">
-    <h1>My EDA BLOG</h1>
-     <div class="dropdown">
-      <button class="dropbtn">HOME</button>
-       <div class="dropdown-content">
-       </div>
+<div class="container">
+
+     <div class="row">
+                     <div class="twelve coloumns">
+                       <header id="header">
+
+                             <h1>My EDA BLOG</h1>
+
+                             <div class="dropdown">
+                                         <button class="dropbtn">HOME
+                                         </button>
+                                                   <div class="dropdown-content">
+                                                   </div>
+                            </div>
+
+                             <div class="dropdown">
+                                         <button class="dropbtn" onclick="location.href='https://surya-surendranath.github.io/blog/Aboutme';">ABOUT
+                                        </button>
+                                                    <div class="dropdown-content">
+                       </div>
      </div>
 
-     <div class="dropdown">
-      <button class="dropbtn" onclick="location.href='https://surya-surendranath.github.io/blog/Aboutme';">ABOUT</button>
-       <div class="dropdown-content">
-      </div>
-    </div>
 
-    <div class="dropdown">
-     <button class="dropbtn">BLOG</button>
-      <div class="dropdown-content">
-       <a href="blog/Technical-blob">Technical Blog </a>
-       <a href="blog/Cultural-blog">Cultural Blog</a>
-     </div>
-     </div>
+     <div class="row">
+                     <div class="twelve coloumns">
 
-    <div class="dropdown">
-     <button class="dropbtn" >PROJECTS</button>
-      <div class="dropdown-content">
-     </div>
-   </div>
+                              <div class="dropdown">
+                                              <button class="dropbtn">BLOG
+                                              </button>
+                                                      <div class="dropdown-content">
+                                                          <a href="blog/Technical-blob">Technical Blog 
+                                                         </a>
+                                                          <a href="blog/Cultural-blog">Cultural Blog
+                                                         </a>
+                                                      </div>
+                             </div>
 
-    <div class="dropdown">
-     <button class="dropbtn">CONTACT ME</button>
-      <div class="dropdown-content">
-      </div>
-      </div>
+                              <div class="dropdown">
+                                              <button class="dropbtn" >PROJECTS
+                                              </button>
+                                                        <div class="dropdown-content">
+                                                      </div>
+                             </div>
+
+                      <div class="dropdown">
+                                              <button class="dropbtn">CONTACT ME
+                                              </button>
+                                                       <div class="dropdown-content">
+                                                      </div>
+                      </div>
   </header>
 
    <!-- Section -->
       <section id="sec">
-       <img class="img1" src="images/bb.jpg" alt="profile" >
-         <DIV  STYLE="position:absolute; top:150px; left:0px; width:100%; height:100px; float:left">
-           <CENTER><FONT SIZE="+4" COLOR="00ff00">
-            <p id="division1" <b>WELCOME TO my Homepage</b></p>
-             </FONT></CENTER> 
+                  <div class="container">
+                                 <div class="row">
+                                          <div class="twelve coloumns">
+                                              <img class="img1" src="images/bb.jpg" alt="profile" >
+                                              <div  STYLE="position:absolute; top:150px; left:0px; width:100%;height:100px;float:left">
+                                                 <center>
+                                                      <font SIZE="+4" COLOR="00ff00">
+                                                        <p id="division1" <b>WELCOME TO my Homepage</b></p>
+                                                      </font>
+                                                </center> 
+                                              </div>
+                                            </div>
+                                  </div>
+                  </div>
        </section>
 
 <!-- Footer -->
        <footer id="nav1">
-         <p><b>Follow me on<b></p>
-             <a  href="https://twitter.com/ssumeshsurya"> <img src="../images/twitter.png" title="follow me" width="50" height="50"/>
-             </a>
-             <a  href="https://github.com/surya-surendranath"  > <img src="../images/git.png" title="follow me" width="50" height="50"
-             </a>
-             <a  href="#"  > <img src="../images/linkedin.jpg" title="something" width="50" height="50"/> 
-             </a>
+                     <div class="container">
+                                 <div class="row">
+                                          <div class="twelve coloumns">
+                                             <p><b>Follow me on</b></p>
+                                                         <a  href="https://twitter.com/ssumeshsurya"> <img src="../images/twitter.png" title="follow me" width="50" height="50"/>
+                                                         </a>
+                                                         <a  href="https://github.com/surya-surendranath"  > <img src="../images/git.png" title="follow me" width="50" height="50"/>
+                                                         </a>
+                                                         <a  href="#"  > <img src="../images/linkedin.jpg" title="folloe me" width="50" height="50"/> 
+                                                         </a>
+                                            </div>
+                                    </div>
+                      </div>
               
         </footer>
 
