--- a/index.html
+++ b/index.html
@@ -18,6 +18,16 @@
                        <header id="header">
 
                              <h1>My EDA BLOG</h1>
+                     </div>
+     </div>
+
+ </div>
+
+<div class="container">
+
+      <div class="row">
+                     <div class="twelve coloumns">
+
 
                              <div class="dropdown">
                                          <button class="dropbtn">HOME
@@ -30,13 +40,11 @@
                                          <button class="dropbtn" onclick="location.href='https://surya-surendranath.github.io/blog/Aboutme';">ABOUT
                                         </button>
                                                     <div class="dropdown-content">
-                       </div>
-     </div>
+                                                   </div>
+                            </div>
 
 
-     <div class="row">
-                     <div class="twelve coloumns">
-
+     
                               <div class="dropdown">
                                               <button class="dropbtn">BLOG
                                               </button>
@@ -55,12 +63,16 @@
                                                       </div>
                              </div>
 
-                      <div class="dropdown">
+                              <div class="dropdown">
                                               <button class="dropbtn">CONTACT ME
                                               </button>
                                                        <div class="dropdown-content">
                                                       </div>
-                      </div>
+                             </div>
+                        </div>
+      </div>
+</div>
+
   </header>
 
    <!-- Section -->
