--- a/index.html
+++ b/index.html
@@ -48,10 +48,18 @@
                                               <button class="dropbtn">BLOG
                                               </button>
                                                       <div class="dropdown-content">
-                                                          <a href="blog/Technical-blob">Technical Blog 
-                                                         </a>
-                                                          <a href="blog/Cultural-blog">Cultural Blog
-                                                         </a>
+                                                        <nav id="dropdown-nav">
+                                                           <ul>
+                                                              <li>
+                                                                  <a href="blog/Technical-blob">Technical Blog 
+                                                                  </a>
+                                                              </li>
+                                                              <li>
+                                                                  <a href="blog/Cultural-blog">Cultural Blog
+                                                                  </a>
+                                                              </li>
+                                                          </ul>
+                                                        </nav>
                                                       </div>
                              </div>
 
