--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                                  <div class="row">
                                           <div class="twelve coloumns">
                                               <img class="section-image" src="images/bb.jpg" alt="profile" >
-                                              <div id="flex-img" > 
+                                              <div class="flex-img" > 
                                                  
                                                      
                                                         <p id="page-animate"> <b>WELCOME TO my Homepage</b></p>
