--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                      <div class="twelve coloumns page-heading">
                        
 
-                             <h1>My EDA BLOG</h1>
+                             <h1>My BLOG</h1>
                      </div>
      </div>
 
